--- a/LoReal.html
+++ b/LoReal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/museum.css">
+    <link rel="stylesheet" href="css/LoReal.css">
     <title>LOREAL</title>
 </head>
 <body>
@@ -418,5 +418,5 @@
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <!-- d3 END -->
 
-<script type="module"  src="js/museum.js"></script>
+<script type="module"  src="js/loreal.js"></script>
 </html>
