--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@
                                     </p>
                                 </div>
                                 <div class="link">
-                                    <a href="//lim-jaeeun.github.io/portfolio/LoReal.html">open website</a>
+                                    <a href="//lim-jaeeun.github.io/portfolio/LoReal.html" target='_blank'>open website</a>
                                 </div>
                             </div>
                             <div class="right_side">
@@ -253,7 +253,7 @@
                                     </p>
                                 </div>
                                 <div class="link">
-                                    <a href="https://lim-jaeeun.github.io/portfolio/tamburins_reDesign.html">open website</a>
+                                    <a href="https://lim-jaeeun.github.io/portfolio/tamburins_reDesign.html" target='_blank'>open website</a>
                                 </div>
                             </div>
                             <div class="right_side">
@@ -297,7 +297,7 @@
                                     </p>
                                 </div>
                                 <div class="link">
-                                    <a href="#">open website</a>
+                                    <a href="//lim-jaeeun.github.io/portfolio/gsap_practice.html" target='_blank'>open website</a>
                                 </div>
                             </div>
                             <div class="right_side">
@@ -418,6 +418,12 @@
                                     <h3 class="subject">사용한 언어</h3>
                                     <p class="content">html / scss / jQuery</p>
                                 </div>
+                                <div class="date">
+                                    <h3 class="subject">Timeline</h3>
+                                    <p class="content">
+                                       2021.02.22 - 2021.02.28
+                                    </p>
+                                </div>
                                 <div class="details">
                                     <h3 class="subject">project details</h3>
                                     <p class="content">
@@ -426,7 +432,7 @@
                                     </p>
                                 </div>
                                 <div class="link">
-                                    <a href="//glgl123456.dothome.co.kr/port2/index.html#void">open website</a>
+                                    <a href="//glgl123456.dothome.co.kr/port2/index.html#void" target='_blank'>open website</a>
                                 </div>
                             </div>
                             <div class="right_side">
@@ -456,6 +462,12 @@
                                 <div class="language">
                                     <h3 class="subject">사용한 언어</h3>
                                     <p class="content">html / css / jQuery</p>
+                                </div>
+                                <div class="date">
+                                    <h3 class="subject">Timeline</h3>
+                                    <p class="content">
+                                       2018.06 - 2019.10
+                                    </p>
                                 </div>
                                 <div class="details">
                                     <h3 class="subject">project details</h3>
