--- a/portfolio.html
+++ b/portfolio.html
@@ -183,7 +183,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">로레알 리디자인</p>
+                                    <p class="content">LoReal 리디자인&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -204,7 +204,7 @@
                                 <div class="details">
                                     <h3 class="subject">project details</h3>
                                     <p class="content">
-                                        Gsap을 위주로 제작한 사이트입니다. d3.js로 하단의 세계 지도를 구현하였습니다. 지도 내에서 스크롤을 하면 확대와 축소가 가능하며 핀을 hover하면 해당위치의 나라이름이 노출됩니다. 
+                                        Gsap을 위주로 작업한 사이트입니다. d3.js로 하단의 세계 지도를 구현하였습니다. 지도 내에서 스크롤을 하면 확대와 축소가 가능하며 핀을 hover하면 해당위치의 나라이름이 노출됩니다. 
                                         <br/> <br/>* 반응형으로 제작되었습니다.
                                     </p>
                                 </div>
@@ -229,7 +229,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">탬버린즈 리디자인</p>
+                                    <p class="content">탬버린즈 리디자인&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -273,7 +273,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">GSAP연습 사이트</p>
+                                    <p class="content">GSAP연습 사이트 퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -318,7 +318,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">현대 콜센터 어드민</p>
+                                    <p class="content">현대 콜센터 어드민 디자인&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -362,7 +362,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">통계청 콜센터 어드민</p>
+                                    <p class="content">통계청 콜센터 어드민 디자인&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -408,7 +408,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">발뮤다 리디자인</p>
+                                    <p class="content">발뮤다 리디자인&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;퍼블리싱</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -453,7 +453,7 @@
                             <div class="left_side">
                                 <div class="project_name">
                                     <h3 class="subject">project</h3>
-                                    <p class="content">솔루션사이트 유지보수/부분리뉴얼</p>
+                                    <p class="content">솔루션사이트 유지보수&nbsp;&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;부분리뉴얼</p>
                                 </div>
                                 <div class="responsibility">
                                     <h3 class="subject">responsibilities</h3>
@@ -472,7 +472,7 @@
                                 <div class="details">
                                     <h3 class="subject">project details</h3>
                                     <p class="content">
-                                        첫직장에서 cafe24, makeshop, godomall등 솔루션사이트를 이용하는 업체들의 유지보수와 부분리뉴얼을 작업하였습니다. 고객사에서 부분리뉴얼에 대한 디자인을 전달해주면 가격을 책정해 퍼블리싱을 진행하였습니다. 모바일을 위주로 작업했으며 cafe24를 이용하는 업체들을 주로 담당하였습니다.
+                                        첫직장에서 cafe24, makeshop, godomall등 솔루션사이트를 이용하는 고객사들의 유지보수와 부분리뉴얼을 작업하였습니다. 고객사에서 부분리뉴얼에 대한 디자인을 전달해주면 가격을 책정해 퍼블리싱을 진행하였습니다. 모바일을 위주로 작업했으며 cafe24를 이용하는 업체들을 주로 담당하였습니다.
                                     </p>
                                 </div>
                                 <div class="link none">
