--- a/LoReal.html
+++ b/LoReal.html
@@ -58,8 +58,8 @@
                     </div>
                 </div>
                 <div class="video_wrap">
-                  <video autoplay="autoplay" loop="loop" muted="muted">
-                   <!-- <video loop="loop" muted="muted"> -->
+                   <!-- <video autoplay="autoplay" loop="loop" muted="muted"> -->
+                  <video loop="loop" muted="muted">
                     <source data-src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4"  poster="images/poster.jpg" type="video/mp4" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4">
                 </video>
                     <!-- <video autoplay="autoplay" loop="loop" muted="muted" playsinline="" poster="/-/media/project/loreal/brand-sites/corp/master/lcorp/7-local-country-folder/korea/page/img10-min.jpg?rev=846085c051fd47dc8d2d3c98d4b865ba" class="" id="html5_video_swhj0p63xu9"><source data-src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4" type="video/mp4" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4"> <track label="English" kind="captions" srclang="ko-KR" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4"></video> -->
@@ -72,9 +72,10 @@
                     Create the Beauty<br> that Moves the World
                     <span class="sub_tit">세상을 움직이는 아름다움을 창조합니다</span>
                 </h2>
-                <svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-1.41421 -0.656854 11.974 8.99">
+                <div class="background_ani"></div>
+                <!--<svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-1.41421 -0.656854 11.974 8.99">
 	                <path id="wave" d="M 0 0 C -1 1 -2 3 -1 4 C 1 5 -1 7 2 7 C 5 7 4 10 8 7 C 10 5 6 5 6 3 C 6 1 4 2 4 1 C 4 -1 1 -1 0 0" stroke="#000" stroke-width="0.01" fill="#fff"></path>
-                </svg>
+                </svg>-->
                 <div class="Division_wrap">
                     <div class="height_img_wrap">
                         <div class="img_width">
@@ -416,7 +417,10 @@
 <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-json/2.6.0/jquery.json.min.js""></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
-<!-- d3 END -->
+
+<!-- lottie -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"></script>
+
 
 <script type="module"  src="js/loreal.js"></script>
 </html>
