--- a/portfolio.html
+++ b/portfolio.html
@@ -292,7 +292,7 @@
                                 <div class="details">
                                     <h3 class="subject">project details</h3>
                                     <p class="content">
-                                        Gsap을 연습하고 익히기 위해 제작한 사이트입니다.
+                                        Gsap을 연습하고 익히기 위해 제작한 사이트입니다. footer의 NOW버튼을 호버하면 하단에서 이미지가 올라옵니다.
                                         <br/> <br/> *PC적응형으로 제작되었습니다.
                                     </p>
                                 </div>
