--- a/LoReal.html
+++ b/LoReal.html
@@ -58,8 +58,8 @@
                     </div>
                 </div>
                 <div class="video_wrap">
-                   <!-- <video autoplay="autoplay" loop="loop" muted="muted"> -->
-                  <video loop="loop" muted="muted">
+                   <video autoplay="autoplay" loop="loop" muted="muted">
+                  <!-- <video loop="loop" muted="muted"> -->
                     <source data-src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4"  poster="images/poster.jpg" type="video/mp4" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4">
                 </video>
                     <!-- <video autoplay="autoplay" loop="loop" muted="muted" playsinline="" poster="/-/media/project/loreal/brand-sites/corp/master/lcorp/7-local-country-folder/korea/page/img10-min.jpg?rev=846085c051fd47dc8d2d3c98d4b865ba" class="" id="html5_video_swhj0p63xu9"><source data-src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4" type="video/mp4" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4"> <track label="English" kind="captions" srclang="ko-KR" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-85f840f4-1367-45a3-b087-c4adc2df0369_original.mp4"></video> -->
