--- a/tamburins_reDesign.html
+++ b/tamburins_reDesign.html
@@ -57,6 +57,7 @@
     </header>
     <section id="main">
         <div class="main_warp">
+            <div class="preview_img"></div>
             <canvas id="canvas"></canvas>
         </div> 
     </section>
