--- a/portfolio.html
+++ b/portfolio.html
@@ -432,7 +432,7 @@
                                     </p>
                                 </div>
                                 <div class="link">
-                                    <a href="//glgl123456.dothome.co.kr/port2/index.html" target='_blank'>open website</a>
+                                    <a href="http://glgl123456.dothome.co.kr/port2/index.html" target='_blank'>open website</a>
                                 </div>
                             </div>
                             <div class="right_side">
