--- a/LoReal.html
+++ b/LoReal.html
@@ -38,7 +38,7 @@
             <h2 class="blind">메인 첫번째 화면</h2>
             <div class="visual_wrap">
                 <div class="visual_text">
-                    <div class="ani_text_svg" data-transformy="-300">
+                    <div class="ani_text_svg" data-transformy="-100">
                         <img src="images/L.svg" alt="">
                     </div>
                     <div class="ani_text_svg" data-transformy="-400">
@@ -292,7 +292,7 @@
                 </h2> -->
                   <!-- <video autoplay="autoplay" loop="loop" muted="muted"> -->
                     <div class="sticky-rect_element">
-                        <video loop="loop" muted="muted">
+                        <video autoplay="autoplay" loop="loop" muted="muted"> 
                             <source data-src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4"  poster="images/banner7.webp" type="video/mp4" src="https://cdn.flowplayer.com/187d3787-e32b-47b7-bf79-799ce0358df7/v-eab3a23d-a799-48cc-8cbc-e59828e92f84_original.mp4">
                         </video>
                     </div>
